--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,7 +44,7 @@ body {
 	text-decoration: none;
 	background-color: #2cca4c;
 	color: white;
-	padding: 10px 18px;
+	padding: 20px;
 	font-weight: bold;
 	border-radius: 5px;
 }
