--- a/templates/personnage/index.html.twig
+++ b/templates/personnage/index.html.twig
@@ -21,7 +21,7 @@
 			{% for personnage in personnages %}
 				<div class="col-3 m-5">
 					<div class="card card-div p-3">
-						<img src="{{asset('uploads/image/' ~ personnage.img)}}" style='height:50px'>;
+						<img src="{{asset('uploads/image/' ~ personnage.image)}}" class="card-img-top" alt="...">
 						<div class="card-body">
 							<h5 class="card-title">
 								{{ personnage.name }}</h5>
