--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -7,7 +7,7 @@
 		<div class="collapse navbar-collapse">
 			<ul class="navbar-nav me-auto">
 				<li class="nav-item">
-					<a class="nav-link active" href="{{path('app_home')}}">Accueil
+					<a class="nav-link active" href="{{path('app_home')}}">Acc
 						<span class="visually-hidden">(current)</span>
 					</a>
 				</li>
