--- a/templates/personnage/show.html.twig
+++ b/templates/personnage/show.html.twig
@@ -11,8 +11,8 @@
     <table class="table w-50 mx-auto">
         <tbody>
             <tr>
-                <th>Id</th>
-                <td>{{ personnage.id }}</td>
+                <th>photo</th>
+                <td><img src="{{asset('uploads/image/' ~ personnage.image)}}"</td>
             </tr>
             <tr>
                 <th>Name</th>
