--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -8,7 +8,13 @@
 		<h1>ACCEUIL</h1>
 	</div>
 
-
+<div class='p-5'>
+ <a class="btn-choice" href="{{ path('app_personnage_index') }}">principal</a>
+      {% for race in races %}
+      <a class="btn-choice"href="{{path('app_personnage_filter',{'id':race.id})}}">{{race.name}}</a>
+        {% endfor %}
+        </div>
+	
 
 	<div class="container ">
 		<div class="row justify-content-evenly">
@@ -26,11 +32,15 @@
 								{{ personnage.pouvoir }}</p>
 							<p class="card-text">
 								{{ personnage.race.name }}</p>
-
+							{% if is_granted('ROLE_USER') %}
+							<a class="btn btn-danger" <a href="{{ path('app_personnage_show', {'id': personnage.id}) }}">show</a>
+							{% endif %}
 						</div>
                         
 					</div>
 					</div>
                     {% endfor %}
-
+					{% if is_granted('ROLE_ADMIN') %}
+						<a href="{{ path('app_personnage_new') }}">Create new</a>
+					{% endif %}
 {% endblock %}
