--- a/templates/personnage/index.html.twig
+++ b/templates/personnage/index.html.twig
@@ -31,10 +31,14 @@
 								{{ personnage.pouvoir }}</p>
 							<p class="card-text">
 								{{ personnage.race.name }}</p>
-
+							{% if is_granted('ROLE_USER') %}
 							<a class="btn-show" href="{{ path('app_personnage_show', {'id': personnage.id}) }}">show</a>
-							<a class="btn-edit" href="{{ path('app_personnage_edit', {'id': personnage.id}) }}">edit</a>
+							{% endif %}
+							
+							
+							
 						</div>
+							
 					</div>
 				</div>
 
@@ -45,6 +49,8 @@
 			{% endfor %}
 		</div>
 	</div>
-
-	<a href="{{ path('app_personnage_new') }}">Create new</a>
+	{% if is_granted('ROLE_ADMIN') %}
+		<a href="{{ path('app_personnage_new') }}">Create new</a>
+	{% endif %}
+	
 {% endblock %}
