--- a/templates/personnage/show.html.twig
+++ b/templates/personnage/show.html.twig
@@ -33,13 +33,32 @@
           
         </tbody>
     </table>
-
+    
     <div class="w-25 mx-auto d-flex align-items-center flex-column">
         
-
+    {% if is_granted('ROLE_ADMIN') %}
     <a class="btn btn-warning my-1" href="{{ path('app_personnage_edit', {'id': personnage.id}) }}">edit</a>
 
     {{ include('personnage/_delete_form.html.twig') }}
-      <a href="{{ path('app_personnage_index') }}">back to list</a>
+      
+    {% endif %}
     </div>
+        <div>
+        <h2>Liste des commentaires</h2>
+        {% for comment in personnage.comments %}
+            <p>publier par {{comment.user.name}} le {{comment.createAt|date("d/m/y H:i")}}</p>
+            <div>{{comment.comments}}
+            {# {{dump(userCommentaire)}} #}
+            {% if (userCommentaire.id == comment.user.id) or is_granted('ROLE_ADMIN') %}
+             <a class="btn btn-warning my-1" href="{{ path('app_comment_edit', {'id': comment.id}) }}">edit</a>
+             {% endif %}
+            </div>
+         {% endfor %}
+        </div>
+       <div>
+       {{form(form)}}
+         {# <button class="btn btn-info mx-2">{{ button_label|default('Save') }}</button> #}
+       </div>
+        <a href="{{ path('app_home') }}">back to list</a>
+    
 {% endblock %}
